# random-quote-generator

./: pyproject.toml  setup.cfg
app/: __init__.py  conf.py
app/data/: quotes.json
app/services/: quote.py
app/tests/services/: test_quote.py
docs/: conf.py  index.rst
