[tool.poetry]
name = "random_quote_generator"
version = "0.1.0"
description = ""
authors = ["Sheikh Haris Zahid <sheikh.haris.zahid@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.38.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
